--- a/src/main/resources/views/documentos/Fases/listfase.fxml
+++ b/src/main/resources/views/documentos/Fases/listfase.fxml
@@ -4,13 +4,12 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="552.0" prefWidth="981.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.listFase">
+<BorderPane maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.listFase">
    <left>
-      <VBox maxWidth="-Infinity" prefHeight="552.0" prefWidth="242.0" stylesheets="@../../../utils/style.css" BorderPane.alignment="CENTER">
+      <VBox minHeight="-Infinity" minWidth="-Infinity" prefWidth="205.0" stylesheets="@../../../utils/style.css" BorderPane.alignment="CENTER">
          <padding>
             <Insets left="10.0" right="10.0" top="5.0" />
          </padding>
@@ -23,7 +22,7 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <VBox fx:id="VboxListFases" alignment="TOP_CENTER" prefHeight="359.0" prefWidth="313.0" spacing="10.0">
+            <VBox fx:id="VboxListFases" alignment="TOP_CENTER" spacing="10.0">
                <padding>
                   <Insets bottom="5.0" top="5.0" />
                </padding>
@@ -32,6 +31,6 @@
       </VBox>
    </left>
    <center>
-      <Pane fx:id="panel" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <VBox fx:id="panel" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
