--- a/src/main/resources/views/documentos/Fases/viewfase.fxml
+++ b/src/main/resources/views/documentos/Fases/viewfase.fxml
@@ -9,12 +9,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.ViewFase">
+<BorderPane prefHeight="172.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.ViewFase">
    <top>
-      <VBox prefHeight="50.0" prefWidth="911.0" BorderPane.alignment="CENTER">
+      <VBox maxWidth="1.7976931348623157E308" prefHeight="50.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="labelNombre" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefWidth="404.0" text="1. Cargando requisitos básicos" wrapText="true">
+            <Label fx:id="labelNombre" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefWidth="407.0" text="1. Cargando requisitos básicos 1. Cargando requisitos básicos 1. Cargando requisitos básicos 1. Cargando requisitos básicos" wrapText="true">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -22,7 +21,7 @@
                   <Insets bottom="5.0" />
                </VBox.margin>
             </Label>
-            <HBox maxWidth="1.7976931348623157E308" prefWidth="295.0">
+            <HBox maxWidth="1.7976931348623157E308">
                <children>
                   <Label fx:id="labelFechaInicio" text="fechainicio " textFill="#0d6f6b">
                      <font>
@@ -53,13 +52,16 @@
       </VBox>
    </top>
    <center>
-      <VBox fx:id="boxListRequisitos" prefHeight="411.0" prefWidth="311.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="boxListRequisitos" BorderPane.alignment="CENTER">
          <padding>
             <Insets left="10.0" />
          </padding>
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <BorderPane.margin>
+            <Insets left="5.0" right="5.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
