--- a/src/main/resources/views/documentos/gestiondocumentos.fxml
+++ b/src/main/resources/views/documentos/gestiondocumentos.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -12,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="599.0" prefWidth="1017.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.DocumentosController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.DocumentosController">
    <top>
-      <Pane prefHeight="51.0" prefWidth="833.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="51.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="21.0" layoutY="13.0" text="Gestion de Tramites">
                <font>
@@ -25,9 +24,9 @@
       </Pane>
    </top>
    <center>
-      <BorderPane prefHeight="419.0" prefWidth="873.0" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="419.0" BorderPane.alignment="CENTER">
          <top>
-            <HBox alignment="CENTER_LEFT" prefHeight="27.0" prefWidth="881.0" BorderPane.alignment="CENTER">
+            <HBox alignment="CENTER_LEFT" prefHeight="27.0" BorderPane.alignment="CENTER">
                <padding>
                   <Insets left="20.0" />
                </padding>
@@ -54,27 +53,33 @@
             </HBox>
          </top>
          <center>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="655.0" prefWidth="1089.0" BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="655.0" BorderPane.alignment="CENTER">
                <children>
-                  <Pane fx:id="panelresult" minHeight="-Infinity" prefWidth="833.0">
+                  <Pane fx:id="panelresult" minHeight="-Infinity">
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin>
                   </Pane>
-                  <SplitPane dividerPositions="0.2" maxHeight="1.7976931348623157E308" style="-fx-border-color: #fff;">
-                     <items>
-                        <ScrollPane style="-fx-border-color: #fff; -fx-background: none; -fx-background-color: #fff;">
+                  <BorderPane>
+                     <left>
+                        <ScrollPane style="-fx-border-color: #fff; -fx-background: none; -fx-background-color: #fff;" BorderPane.alignment="CENTER">
                            <content>
-                              <VBox fx:id="panellisttramites" maxWidth="1.7976931348623157E308" spacing="10.0">
+                              <VBox fx:id="panellisttramites" spacing="10.0">
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </padding>
                               </VBox>
                            </content>
                         </ScrollPane>
-                        <Pane fx:id="paneInfoTramite" style="-fx-background-color: #fff;" />
-                     </items>
-                  </SplitPane>
+                     </left>
+                     <center>
+                        <VBox fx:id="paneInfoTramite" BorderPane.alignment="CENTER">
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                        </VBox>
+                     </center>
+                  </BorderPane>
                </children>
                <BorderPane.margin>
                   <Insets />
