--- a/src/main/resources/views/documentos/file/itemfile.fxml
+++ b/src/main/resources/views/documentos/file/itemfile.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
@@ -16,6 +17,11 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <Button graphicTextGap="1.0" layoutX="217.0" layoutY="10.0" mnemonicParsing="false" onAction="#botonCopiar" styleClass="boton-copiar-pathfile" stylesheets="@../../../utils/style.css" text="url" textFill="#f8f8f8">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor>
+      </Button>
       <Button mnemonicParsing="false" onAction="#botonIr" style="-fx-background-color: orange;" text="Ir" textFill="#f8f8f8" />
    </children>
 </HBox>
