--- a/src/main/resources/views/dashboard/inicio.fxml
+++ b/src/main/resources/views/dashboard/inicio.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -10,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="565.0" prefWidth="854.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.dashboard.DashboardController">
+<AnchorPane prefHeight="565.0" prefWidth="854.0" stylesheets="@../../utils/style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.dashboard.DashboardController">
    <children>
       <BorderPane prefHeight="565.0" prefWidth="854.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -120,18 +120,19 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
-                           <font>
-                              <Font name="System Bold" size="18.0" />
-                           </font>
+                        <Button fx:id="btnTramites" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClick" prefHeight="70.0" prefWidth="200.0" text="Tramites">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <styleClass>
+                              <String fx:value="boton-dashboard" />
+                              <String fx:value="boton-dashboard-tramites" />
+                           </styleClass>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #a9ddf9;" text="Modificar documentos" textAlignment="CENTER" textFill="#3d8ae1" wrapText="true">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #a9ddf9;" text="Modificar documentos" textAlignment="CENTER" textFill="#3d8ae1" wrapText="true">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -142,7 +143,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #90fbc3;" text="Eliminar Requisitos" textFill="#129049">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #90fbc3;" text="Eliminar Requisitos" textFill="#129049">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -157,7 +158,7 @@
                   </HBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button fx:id="btnDatos" alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClick" prefHeight="70.0" prefWidth="200.0" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -167,8 +168,12 @@
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <styleClass>
+                              <String fx:value="boton-dashboard" />
+                              <String fx:value="boton-dashboard-datos" />
+                           </styleClass>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -176,7 +181,7 @@
                               <Insets left="20.0" right="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -188,7 +193,7 @@
                   </HBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="110.0" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -199,7 +204,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="363.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -207,7 +212,7 @@
                               <Insets left="20.0" right="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button alignment="CENTER" contentDisplay="CENTER" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
+                        <Button alignment="CENTER" contentDisplay="CENTER" disable="true" graphicTextGap="22.0" layoutX="457.0" layoutY="41.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #ffe5c7;" text="Obtener Datos" textFill="#e5730e">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
