--- a/src/main/resources/views/documentos/Fases/listfase.fxml
+++ b/src/main/resources/views/documentos/Fases/listfase.fxml
@@ -3,15 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.listFase">
+<BorderPane fx:id="boxinfofases" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="537.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.listFase">
    <left>
-      <VBox minHeight="-Infinity" minWidth="-Infinity" prefWidth="205.0" stylesheets="@../../../utils/style.css" BorderPane.alignment="CENTER">
+      <VBox maxHeight="1.7976931348623157E308" minWidth="-Infinity" prefWidth="205.0" stylesheets="@../../../utils/style.css" BorderPane.alignment="CENTER">
          <padding>
-            <Insets left="10.0" right="10.0" top="5.0" />
+            <Insets left="5.0" right="5.0" top="5.0" />
          </padding>
          <children>
             <Button mnemonicParsing="false" onAction="#buttonShowFases" style="-fx-background-color: #4e86ff;" text="Mostrar fases" textFill="#00174a">
@@ -22,15 +23,18 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </Button>
-            <VBox fx:id="VboxListFases" alignment="TOP_CENTER" spacing="10.0">
+            <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="0.0" prefWidth="185.0" VBox.vgrow="ALWAYS">
+               <content>
+                  <VBox fx:id="VboxListFases" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefWidth="185.0" spacing="10.0" />
+               </content>
                <padding>
-                  <Insets bottom="5.0" top="5.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
-            </VBox>
+            </ScrollPane>
          </children>
       </VBox>
    </left>
    <center>
-      <VBox fx:id="panel" BorderPane.alignment="CENTER" />
+      <VBox fx:id="panel" maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
