--- a/src/main/resources/views/documentos/Fases/viewfase.fxml
+++ b/src/main/resources/views/documentos/Fases/viewfase.fxml
@@ -4,12 +4,13 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="172.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.ViewFase">
+<BorderPane fx:id="infoViewFase" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="158.0" prefWidth="417.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.fases.ViewFase">
    <top>
       <VBox maxWidth="1.7976931348623157E308" prefHeight="50.0" BorderPane.alignment="CENTER">
          <children>
@@ -52,16 +53,17 @@
       </VBox>
    </top>
    <center>
-      <VBox fx:id="boxListRequisitos" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets left="10.0" />
-         </padding>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <BorderPane.margin>
-            <Insets left="5.0" right="5.0" />
-         </BorderPane.margin>
-      </VBox>
+      <ScrollPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" BorderPane.alignment="CENTER">
+         <content>
+            <VBox fx:id="boxListRequisitos" style="-fx-background-color: yellow;">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </VBox>
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
