--- a/src/main/resources/views/documentos/gestiondocumentos.fxml
+++ b/src/main/resources/views/documentos/gestiondocumentos.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.DocumentosController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="564.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.DocumentosController">
    <top>
-      <Pane prefHeight="51.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="29.0" prefWidth="564.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="21.0" layoutY="13.0" text="Gestion de Tramites">
+            <Label layoutX="14.0" layoutY="-1.0" text="Gestion de Tramites">
                <font>
                   <Font size="21.0" />
                </font>
@@ -24,14 +24,14 @@
       </Pane>
    </top>
    <center>
-      <BorderPane prefHeight="419.0" BorderPane.alignment="CENTER">
+      <BorderPane maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <top>
             <HBox alignment="CENTER_LEFT" prefHeight="27.0" BorderPane.alignment="CENTER">
                <padding>
                   <Insets left="20.0" />
                </padding>
                <children>
-                  <TextField fx:id="txtCodigo" prefHeight="24.0" prefWidth="182.0" promptText="Codigo" text="1824403021">
+                  <TextField fx:id="txtCodigo" prefHeight="24.0" prefWidth="182.0" promptText="Codigo" text="1344102021">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -53,16 +53,16 @@
             </HBox>
          </top>
          <center>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="655.0" BorderPane.alignment="CENTER">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="0.0" prefWidth="564.0" BorderPane.alignment="CENTER">
                <children>
                   <Pane fx:id="panelresult" minHeight="-Infinity">
                      <VBox.margin>
-                        <Insets bottom="5.0" />
+                        <Insets />
                      </VBox.margin>
                   </Pane>
-                  <BorderPane>
+                  <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                      <left>
-                        <ScrollPane style="-fx-border-color: #fff; -fx-background: none; -fx-background-color: #fff;" BorderPane.alignment="CENTER">
+                        <ScrollPane maxHeight="1.7976931348623157E308" style="-fx-border-color: #fff; -fx-background: none; -fx-background-color: #fff;" BorderPane.alignment="CENTER">
                            <content>
                               <VBox fx:id="panellisttramites" spacing="10.0">
                                  <padding>
@@ -73,11 +73,10 @@
                         </ScrollPane>
                      </left>
                      <center>
-                        <VBox fx:id="paneInfoTramite" BorderPane.alignment="CENTER">
+                        <VBox fx:id="paneInfoTramite" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="478.0" BorderPane.alignment="CENTER">
                            <padding>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </padding>
-                        </VBox>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding></VBox>
                      </center>
                   </BorderPane>
                </children>
