--- a/src/main/resources/views/documentos/tramiteitem.fxml
+++ b/src/main/resources/views/documentos/tramiteitem.fxml
@@ -3,25 +3,29 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane minHeight="-Infinity" style="-fx-border-color: grey; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.ItemIntegrante">
+
+<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="216.0" style="-fx-border-color: grey; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.ItemIntegrante">
    <children>
-      <Label fx:id="labeltipoTramite" layoutX="14.0" layoutY="1.0" maxWidth="-Infinity" prefWidth="184.0" text="BACHILLER AUTOMATICO" textFill="#155bff" wrapText="true">
+      <Label fx:id="labeltipoTramite" maxWidth="-Infinity" prefWidth="218.0" text="BACHILLER AUTOMATICO" textFill="#155bff" wrapText="true">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="labelEstado" layoutX="16.0" layoutY="19.0" text="Retirado" textFill="#e10101" />
-      <Button layoutX="13.0" layoutY="36.0" mnemonicParsing="false" onAction="#openTramite" style="-fx-background-color: #00e676;" text="Abrir" textFill="WHITE">
+      <Label fx:id="labelFechaInicio" text="2020-04-23" textFill="#8e15eb">
+         <graphic>
+            <Label fx:id="labelEstado" text="Retirado" textFill="#e10101" />
+         </graphic>
+      </Label>
+      <Button mnemonicParsing="false" onAction="#openTramite" prefHeight="19.0" prefWidth="50.0" style="-fx-background-color: #00e676;" text="Abrir" textFill="WHITE">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Button>
-      <Label fx:id="labelFechaInicio" layoutX="73.0" layoutY="19.0" text="2020-04-23" textFill="#8e15eb" />
    </children>
    <padding>
-      <Insets bottom="5.0" left="10.0" right="10.0" />
+      <Insets bottom="5.0" left="5.0" top="5.0" />
    </padding>
-</Pane>
+</VBox>
