--- a/src/main/resources/views/documentos/viewtramite.fxml
+++ b/src/main/resources/views/documentos/viewtramite.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox fx:id="boxBorderPane" minHeight="-Infinity" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.ViewTramite">
+<VBox fx:id="boxBorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.desktopApp.controllers.documentos.ViewTramite">
    <children>
       <VBox>
          <children>
@@ -16,7 +15,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <HBox spacing="7.0">
+            <HBox prefHeight="26.0" prefWidth="513.0" spacing="7.0">
                <children>
                   <HBox>
                      <children>
@@ -92,8 +91,11 @@
             </HBox>
          </children>
          <padding>
-            <Insets left="10.0" right="10.0" top="10.0" />
+            <Insets left="10.0" right="10.0" top="5.0" />
          </padding>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
       </VBox>
    </children>
 </VBox>
